terraform-aws-dynamicblock/before.tf
/* resource "aws_security_group" "demo_sg" {
    name = "sample-sg"

    ingress {
      from_port = 9090
      to_port = 9090
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
      from_port = "80"
      to_port = "80"
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
}
*/
